# Autoencoders

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  premake_build.lua
buildsystem/CMake/: compiler_support.cmake  configuration.cmake  library_support.cmake  utilities.cmake
buildsystem/Premake/: libraries.lua  utilities.lua
doc/: sanity_rules.md
executable/: CMakeLists.txt  main.cpp
production/: CMakeLists.txt  premake5.lua
production/include/common/: testable_assert.h
production/include/executor/: application.h  configurator.h  executor.h  options.h  os_proxy.h  version.h
production/libs/: CMakeLists.txt  premake5.lua
production/libs/spdlog/: CMakeLists.txt  premake5.lua
production/libs/utcore/: CMakeLists.txt
production/subsystems/: CMakeLists.txt
production/subsystems/executor/: CMakeLists.txt  premake5.lua
production/subsystems/executor/src/: application.cpp  configurator.cpp  executor.cpp  options.cpp  os_proxy.cpp
tests/: CMakeLists.txt  premake5.lua
tests/benchmarks/: CMakeLists.txt  main.cpp  premake5.lua
tests/benchmarks/examples/: sorting.cpp
tests/libs/: CMakeLists.txt  premake5.lua
tests/libs/Celero/: CMakeLists.txt  premake5.lua
tests/libs/turtle/: CMakeLists.txt  premake5.lua
tests/testcases/: CMakeLists.txt  main.cpp  premake5.lua
tests/testcases/examples/: adding.cpp
tests/testcases/executor/: os_proxy_tests.cpp
