CMAKE_MINIMUM_REQUIRED(VERSION 2.8.1)
CMAKE_POLICY(VERSION 2.8.1)

SET(PROJECT_NAME utcore)

IF(NOT ${USE_LAPACK})
    MESSAGE(FATAL_ERROR "utcore requires LAPACK for correct work")
ENDIF(NOT ${USE_LAPACK})

ADD_DEFINITIONS("-DHAVE_LAPACK=ON")

SET(UTCORE_INCLUDE_DIR ${LIBRARIES_BASE_DIR}/utcore/utcore/src)
SET(UTCORE_INCLUDE_DIR ${UTCORE_INCLUDE_DIR} PARENT_SCOPE)

FILE(GLOB_RECURSE SOURCES ${UTCORE_INCLUDE_DIR}/*.cpp)

INCLUDE_DIRECTORIES(${UTCORE_INCLUDE_DIR})

ADD_LIBRARY(${PROJECT_NAME} ${SOURCES})